--- a/Wand/Wand.vcxproj
+++ b/Wand/Wand.vcxproj
@@ -93,21 +93,29 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Source\IndexBuffer.cpp" />
-    <ClCompile Include="Source\Input.cpp" />
-    <ClCompile Include="Source\VertexArray.cpp" />
-    <ClCompile Include="Source\VertexBuffer.cpp" />
-    <ClCompile Include="Source\VertexLayout.cpp" />
+    <ClCompile Include="Source\Graphics\IndexBuffer.cpp" />
+    <ClCompile Include="Source\Input\Input.cpp" />
+    <ClCompile Include="Source\Graphics\ShaderProgram.cpp" />
+    <ClCompile Include="Source\Graphics\VertexArray.cpp" />
+    <ClCompile Include="Source\Graphics\VertexBuffer.cpp" />
+    <ClCompile Include="Source\Graphics\VertexLayout.cpp" />
+    <ClCompile Include="Source\Utils.cpp" />
     <ClCompile Include="Source\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\IndexBuffer.h" />
-    <ClInclude Include="Source\Input.h" />
-    <ClInclude Include="Source\InputMacros.h" />
-    <ClInclude Include="Source\VertexArray.h" />
-    <ClInclude Include="Source\VertexBuffer.h" />
-    <ClInclude Include="Source\VertexLayout.h" />
+    <ClInclude Include="Source\Graphics\IndexBuffer.h" />
+    <ClInclude Include="Source\Input\Input.h" />
+    <ClInclude Include="Source\Input\InputMacros.h" />
+    <ClInclude Include="Source\Graphics\ShaderProgram.h" />
+    <ClInclude Include="Source\Graphics\VertexArray.h" />
+    <ClInclude Include="Source\Graphics\VertexBuffer.h" />
+    <ClInclude Include="Source\Graphics\VertexLayout.h" />
+    <ClInclude Include="Source\Utils.h" />
     <ClInclude Include="Source\Window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Source\Graphics\Shaders\Standard.frag" />
+    <None Include="Source\Graphics\Shaders\Standard.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
