--- a/Wand/Wand.vcxproj
+++ b/Wand/Wand.vcxproj
@@ -59,7 +59,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\glm\;$(ProjectDir)Dependencies\glad\include\;$(ProjectDir)Source\;$(ProjectDir)Dependencies\GLFW\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\stb\;$(ProjectDir)Dependencies\glm\;$(ProjectDir)Dependencies\glad\include\;$(ProjectDir)Source\;$(ProjectDir)Dependencies\GLFW\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard_C>Default</LanguageStandard_C>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -80,7 +80,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\glm\;$(ProjectDir)Dependencies\glad\include\;$(ProjectDir)Source\;$(ProjectDir)Dependencies\GLFW\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\stb\;$(ProjectDir)Dependencies\glm\;$(ProjectDir)Dependencies\glad\include\;$(ProjectDir)Source\;$(ProjectDir)Dependencies\GLFW\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard_C>Default</LanguageStandard_C>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -96,17 +96,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Dependencies\stb\stb_image\stb_image.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Source\Core\App.cpp" />
     <ClCompile Include="Source\Graphics\Drawable.cpp" />
-    <ClCompile Include="Source\Graphics\IndexBuffer.cpp" />
+    <ClCompile Include="Source\Graphics\OpenGL\IndexBuffer.cpp" />
+    <ClCompile Include="Source\Graphics\OpenGL\Texture.cpp" />
     <ClCompile Include="Source\Graphics\Rectangle.cpp" />
     <ClCompile Include="Source\Graphics\Renderer.cpp" />
+    <ClCompile Include="Source\Graphics\Sprite.cpp" />
+    <ClCompile Include="Source\Graphics\Transform.cpp" />
     <ClCompile Include="Source\Input\Input.cpp" />
-    <ClCompile Include="Source\Graphics\ShaderProgram.cpp" />
-    <ClCompile Include="Source\Graphics\VertexArray.cpp" />
-    <ClCompile Include="Source\Graphics\VertexBuffer.cpp" />
-    <ClCompile Include="Source\Graphics\VertexLayout.cpp" />
+    <ClCompile Include="Source\Graphics\OpenGL\ShaderProgram.cpp" />
+    <ClCompile Include="Source\Graphics\OpenGL\VertexArray.cpp" />
+    <ClCompile Include="Source\Graphics\OpenGL\VertexBuffer.cpp" />
+    <ClCompile Include="Source\Graphics\OpenGL\VertexLayout.cpp" />
     <ClCompile Include="Source\Utils.cpp" />
     <ClCompile Include="Source\WandPCH.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -118,22 +122,25 @@
     <ClInclude Include="Source\Core\App.h" />
     <ClInclude Include="Source\Graphics\Drawable.h" />
     <ClInclude Include="Source\Graphics\Graphics.h" />
-    <ClInclude Include="Source\Graphics\IndexBuffer.h" />
+    <ClInclude Include="Source\Graphics\OpenGL\IndexBuffer.h" />
+    <ClInclude Include="Source\Graphics\OpenGL\Texture.h" />
     <ClInclude Include="Source\Graphics\Rectangle.h" />
     <ClInclude Include="Source\Graphics\Renderer.h" />
+    <ClInclude Include="Source\Graphics\Sprite.h" />
+    <ClInclude Include="Source\Graphics\Transform.h" />
     <ClInclude Include="Source\Input\Input.h" />
     <ClInclude Include="Source\Input\InputMacros.h" />
-    <ClInclude Include="Source\Graphics\ShaderProgram.h" />
-    <ClInclude Include="Source\Graphics\VertexArray.h" />
-    <ClInclude Include="Source\Graphics\VertexBuffer.h" />
-    <ClInclude Include="Source\Graphics\VertexLayout.h" />
+    <ClInclude Include="Source\Graphics\OpenGL\ShaderProgram.h" />
+    <ClInclude Include="Source\Graphics\OpenGL\VertexArray.h" />
+    <ClInclude Include="Source\Graphics\OpenGL\VertexBuffer.h" />
+    <ClInclude Include="Source\Graphics\OpenGL\VertexLayout.h" />
     <ClInclude Include="Source\Utils.h" />
     <ClInclude Include="Source\WandPCH.h" />
     <ClInclude Include="Source\Core\Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Source\Graphics\Shaders\Standard.frag" />
-    <None Include="Source\Graphics\Shaders\Standard.vert" />
+    <None Include="Source\Graphics\OpenGL\Shaders\Standard.frag" />
+    <None Include="Source\Graphics\OpenGL\Shaders\Standard.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
