Add OnClick method to UI components

--- a/Wand/Wand.vcxproj
+++ b/Wand/Wand.vcxproj
@@ -103,16 +103,19 @@
     <ClCompile Include="Dependencies\stb\stb_image.cpp" />
     <ClCompile Include="Source\Graphics\Base\Font.cpp" />
     <ClCompile Include="Source\Graphics\FontManager.cpp" />
-    <ClCompile Include="Source\Graphics\Text.cpp" />
+    <ClCompile Include="Source\Graphics\TextGFX.cpp" />
+    <ClCompile Include="Source\UI\Rectangle.cpp" />
+    <ClCompile Include="Source\UI\Sprite.cpp" />
+    <ClCompile Include="Source\UI\Text.cpp" />
     <ClCompile Include="Source\UI\UIComponent.cpp" />
     <ClCompile Include="Source\Wand.cpp" />
     <ClCompile Include="Source\Core\App.cpp" />
     <ClCompile Include="Source\Graphics\Drawable.cpp" />
     <ClCompile Include="Source\Graphics\Base\IndexBuffer.cpp" />
     <ClCompile Include="Source\Graphics\Base\Texture.cpp" />
-    <ClCompile Include="Source\Graphics\Rectangle.cpp" />
+    <ClCompile Include="Source\Graphics\RectangleGFX.cpp" />
     <ClCompile Include="Source\Graphics\Renderer.cpp" />
-    <ClCompile Include="Source\Graphics\Sprite.cpp" />
+    <ClCompile Include="Source\Graphics\SpriteGFX.cpp" />
     <ClCompile Include="Source\Graphics\Base\Transform.cpp" />
     <ClCompile Include="Source\Input\Input.cpp" />
     <ClCompile Include="Source\Graphics\Base\ShaderProgram.cpp" />
@@ -135,10 +138,10 @@
     <ClInclude Include="Source\Graphics\Graphics.h" />
     <ClInclude Include="Source\Graphics\Base\IndexBuffer.h" />
     <ClInclude Include="Source\Graphics\Base\Texture.h" />
-    <ClInclude Include="Source\Graphics\Rectangle.h" />
+    <ClInclude Include="Source\Graphics\RectangleGFX.h" />
     <ClInclude Include="Source\Graphics\Renderer.h" />
-    <ClInclude Include="Source\Graphics\Sprite.h" />
-    <ClInclude Include="Source\Graphics\Text.h" />
+    <ClInclude Include="Source\Graphics\SpriteGFX.h" />
+    <ClInclude Include="Source\Graphics\TextGFX.h" />
     <ClInclude Include="Source\Graphics\Base\Transform.h" />
     <ClInclude Include="Source\Input\Input.h" />
     <ClInclude Include="Source\Input\InputMacros.h" />
@@ -146,6 +149,9 @@
     <ClInclude Include="Source\Graphics\Base\VertexArray.h" />
     <ClInclude Include="Source\Graphics\Base\VertexBuffer.h" />
     <ClInclude Include="Source\Graphics\Base\VertexLayout.h" />
+    <ClInclude Include="Source\UI\Rectangle.h" />
+    <ClInclude Include="Source\UI\Sprite.h" />
+    <ClInclude Include="Source\UI\Text.h" />
     <ClInclude Include="Source\UI\UIComponent.h" />
     <ClInclude Include="Source\Utils.h" />
     <ClInclude Include="Source\WandPCH.h" />
