Render drawables and process clicks based on depth

--- a/Wand/Wand.vcxproj
+++ b/Wand/Wand.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="Source\UI\Sprite.cpp" />
     <ClCompile Include="Source\UI\Text.cpp" />
     <ClCompile Include="Source\UI\UIComponent.cpp" />
+    <ClCompile Include="Source\UI\UIManager.cpp" />
     <ClCompile Include="Source\Wand.cpp" />
     <ClCompile Include="Source\Core\App.cpp" />
     <ClCompile Include="Source\Graphics\Drawable.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="Source\UI\Sprite.h" />
     <ClInclude Include="Source\UI\Text.h" />
     <ClInclude Include="Source\UI\UIComponent.h" />
+    <ClInclude Include="Source\UI\UIManager.h" />
     <ClInclude Include="Source\Utils.h" />
     <ClInclude Include="Source\WandPCH.h" />
     <ClInclude Include="Source\Core\Window.h" />
