--- a/Wand/Wand.vcxproj
+++ b/Wand/Wand.vcxproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <ClCompile Include="External\stb\stb_image.cpp" />
     <ClCompile Include="Source\Core\EntityManager.cpp" />
+    <ClCompile Include="Source\Core\State.cpp" />
     <ClCompile Include="Source\Graphics\Base\Font.cpp" />
     <ClCompile Include="Source\Graphics\FontManager.cpp" />
     <ClCompile Include="Source\Graphics\TextGFX.cpp" />
@@ -111,6 +112,8 @@
     <ClCompile Include="Source\UI\Text.cpp" />
     <ClCompile Include="Source\UI\UIComponent.cpp" />
     <ClCompile Include="Source\UI\UIManager.cpp" />
+    <ClCompile Include="Source\Utils\Pair.cpp" />
+    <ClCompile Include="Source\Utils\Serializer.cpp" />
     <ClCompile Include="Source\Wand.cpp" />
     <ClCompile Include="Source\Core\App.cpp" />
     <ClCompile Include="Source\Graphics\Drawable.cpp" />
@@ -125,7 +128,7 @@
     <ClCompile Include="Source\Graphics\Base\VertexArray.cpp" />
     <ClCompile Include="Source\Graphics\Base\VertexBuffer.cpp" />
     <ClCompile Include="Source\Graphics\Base\VertexLayout.cpp" />
-    <ClCompile Include="Source\Utils.cpp" />
+    <ClCompile Include="Source\Utils\Utils.cpp" />
     <ClCompile Include="Source\WandPCH.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -136,6 +139,7 @@
     <ClInclude Include="Dependencies\stb\stb_image\stb_image.h" />
     <ClInclude Include="Source\Core\App.h" />
     <ClInclude Include="Source\Core\EntityManager.h" />
+    <ClInclude Include="Source\Core\State.h" />
     <ClInclude Include="Source\Graphics\Drawable.h" />
     <ClInclude Include="Source\Graphics\Base\Font.h" />
     <ClInclude Include="Source\Graphics\FontManager.h" />
@@ -159,7 +163,9 @@
     <ClInclude Include="Source\UI\Text.h" />
     <ClInclude Include="Source\UI\UIComponent.h" />
     <ClInclude Include="Source\UI\UIManager.h" />
-    <ClInclude Include="Source\Utils.h" />
+    <ClInclude Include="Source\Utils\Pair.h" />
+    <ClInclude Include="Source\Utils\Serializer.h" />
+    <ClInclude Include="Source\Utils\Utils.h" />
     <ClInclude Include="Source\WandPCH.h" />
     <ClInclude Include="Source\Core\Window.h" />
     <ClInclude Include="Source\Wand.h" />
