--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -67,8 +67,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>%(AdditionalDependencies);opengl32.lib;glfw3.lib;freetype.lib;wand.lib;</AdditionalDependencies>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);$(OutDir)Wand\;$(SolutionDir)Wand\External\GLFW\lib\$(Configuration)\;$(SolutionDir)Wand\External\FreeType\lib\$(Configuration)\</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies);opengl32.lib;glfw3.lib;freetype.lib;soloud.lib;wand.lib;</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);$(OutDir)Wand\;$(SolutionDir)Wand\External\GLFW\lib\$(Configuration)\;$(SolutionDir)Wand\External\FreeType\lib\$(Configuration)\;$(SolutionDir)Wand\External\SoLoud\lib\$(Configuration)\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -89,8 +89,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>%(AdditionalDependencies);opengl32.lib;glfw3.lib;freetype.lib;wand.lib;</AdditionalDependencies>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);$(OutDir)Wand\;$(SolutionDir)Wand\External\GLFW\lib\$(Configuration)\;$(SolutionDir)Wand\External\FreeType\lib\$(Configuration)\</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies);opengl32.lib;glfw3.lib;freetype.lib;soloud.lib;wand.lib;</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);$(OutDir)Wand\;$(SolutionDir)Wand\External\GLFW\lib\$(Configuration)\;$(SolutionDir)Wand\External\FreeType\lib\$(Configuration)\;$(SolutionDir)Wand\External\SoLoud\lib\$(Configuration)\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
