--- a/Wand/Wand.vcxproj
+++ b/Wand/Wand.vcxproj
@@ -105,15 +105,17 @@
     <ClCompile Include="Source\Audio\AudioSource.cpp" />
     <ClCompile Include="Source\Core\EntityManager.cpp" />
     <ClCompile Include="Source\Core\State.cpp" />
+    <ClCompile Include="Source\Events\Event.cpp" />
+    <ClCompile Include="Source\Events\EventManager.cpp" />
     <ClCompile Include="Source\Graphics\Base\Font.cpp" />
     <ClCompile Include="Source\Graphics\FontManager.cpp" />
     <ClCompile Include="Source\Graphics\TextGFX.cpp" />
+    <ClCompile Include="Source\Input\Input.cpp" />
     <ClCompile Include="Source\UI\Layout.cpp" />
     <ClCompile Include="Source\UI\Rectangle.cpp" />
     <ClCompile Include="Source\UI\Sprite.cpp" />
     <ClCompile Include="Source\UI\Text.cpp" />
-    <ClCompile Include="Source\UI\UIComponent.cpp" />
-    <ClCompile Include="Source\UI\UIManager.cpp" />
+    <ClCompile Include="Source\UI\UIEntity.cpp" />
     <ClCompile Include="Source\Utils\Pair.cpp" />
     <ClCompile Include="Source\Utils\Serializer.cpp" />
     <ClCompile Include="Source\Wand.cpp" />
@@ -125,7 +127,7 @@
     <ClCompile Include="Source\Graphics\Renderer.cpp" />
     <ClCompile Include="Source\Graphics\SpriteGFX.cpp" />
     <ClCompile Include="Source\Graphics\Base\Transform.cpp" />
-    <ClCompile Include="Source\Input\Input.cpp" />
+    <ClCompile Include="Source\Input\InputManager.cpp" />
     <ClCompile Include="Source\Graphics\Base\ShaderProgram.cpp" />
     <ClCompile Include="Source\Graphics\Base\VertexArray.cpp" />
     <ClCompile Include="Source\Graphics\Base\VertexBuffer.cpp" />
@@ -144,6 +146,8 @@
     <ClInclude Include="Source\Core\App.h" />
     <ClInclude Include="Source\Core\EntityManager.h" />
     <ClInclude Include="Source\Core\State.h" />
+    <ClInclude Include="Source\Events\Event.h" />
+    <ClInclude Include="Source\Events\EventManager.h" />
     <ClInclude Include="Source\Graphics\Drawable.h" />
     <ClInclude Include="Source\Graphics\Base\Font.h" />
     <ClInclude Include="Source\Graphics\FontManager.h" />
@@ -156,6 +160,7 @@
     <ClInclude Include="Source\Graphics\TextGFX.h" />
     <ClInclude Include="Source\Graphics\Base\Transform.h" />
     <ClInclude Include="Source\Input\Input.h" />
+    <ClInclude Include="Source\Input\InputManager.h" />
     <ClInclude Include="Source\Input\InputMacros.h" />
     <ClInclude Include="Source\Graphics\Base\ShaderProgram.h" />
     <ClInclude Include="Source\Graphics\Base\VertexArray.h" />
@@ -165,8 +170,7 @@
     <ClInclude Include="Source\UI\Rectangle.h" />
     <ClInclude Include="Source\UI\Sprite.h" />
     <ClInclude Include="Source\UI\Text.h" />
-    <ClInclude Include="Source\UI\UIComponent.h" />
-    <ClInclude Include="Source\UI\UIManager.h" />
+    <ClInclude Include="Source\UI\UIEntity.h" />
     <ClInclude Include="Source\Utils\Pair.h" />
     <ClInclude Include="Source\Utils\Serializer.h" />
     <ClInclude Include="Source\Utils\Utils.h" />
